--- a/surfa/templates/surfa/contact-1.html
+++ b/surfa/templates/surfa/contact-1.html
@@ -8,7 +8,7 @@
         <div class="page-banner ovbl-dark" style="background-image:url({% static "assets/images/banner/banner3.jpg" %}));">
             <div class="container">
                 <div class="page-banner-entry">
-                    <h1 class="text-white">Contact Us 1</h1>
+                    <h1 class="text-white">Contact Us</h1>
 				</div>
             </div>
         </div>
@@ -19,12 +19,12 @@
 					<div class="col-lg-5 col-md-5 m-b30">
 						<div class="bg-primary text-white contact-info-bx">
 							<h2 class="m-b10 title-head">Contact <span>Information</span></h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+							<p>contact us for more enquiries.</p>
 							<div class="widget widget_getintuch">	
 								<ul>
-									<li><i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL 309382 New York</li>
-									<li><i class="ti-mobile"></i>0800-123456 (24/7 Support Line)</li>
-									<li><i class="ti-email"></i>info@example.com</li>
+									<li><i class="ti-location-pin"></i>Accra/Ghana</li>
+									<li><i class="ti-mobile"></i>+233 505 681 261 (24/7 Support Line)</li>
+									<li><i class="ti-email"></i>surfaorg@gmail.com</li>
 								</ul>
 							</div>
 							<h5 class="m-t0 m-b20">Follow Us</h5>
