--- a/surfa/templates/surfa/membership.html
+++ b/surfa/templates/surfa/membership.html
@@ -31,7 +31,7 @@
 					<div class="row">
 						<div class="col-md-12 heading-bx text-center">
 							<h2 class="title-head text-uppercase m-b0">Select a job,start working  <br/> <span> with surfa</span></h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+							<p>Apply now , work from home.</p>
 						</div>
 					</div>
 					<div class="section-area section-sp2 popular-courses-bx">
@@ -186,7 +186,7 @@
 				</div>
             </div>
             <!-- Our Services ==== -->
-			<div class="section-area section-sp2 bg-fix ovbl-dark join-bx" style="background-image:url({% static "assets/images/background/bg1.jpg" %});">
+			{% comment %} <div class="section-area section-sp2 bg-fix ovbl-dark join-bx" style="background-image:url({% static "assets/images/background/bg1.jpg" %});">
                 <div class="container">
 					<div class="row">
 						<div class="col-md-12 text-center heading-bx text-white">
@@ -268,7 +268,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> {% endcomment %}
 		<!-- contact area END ==== -->
 		<!-- Our Status ==== -->
 		<div class="section-area content-inner section-sp1">
@@ -278,7 +278,7 @@
 						<div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
 							<div class="counter-style-1">
 								<div class="text-primary">
-									<span class="counter">3000</span><span>+</span>
+									<span class="counter">30</span><span>+</span>
 								</div>
 								<span class="counter-text">Completed Projects</span>
 							</div>
@@ -286,7 +286,7 @@
 						<div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
 							<div class="counter-style-1">
 								<div class="text-black">
-									<span class="counter">2500</span><span>+</span>
+									<span class="counter">30</span><span>+</span>
 								</div>
 								<span class="counter-text">Happy Clients</span>
 							</div>
@@ -294,7 +294,7 @@
 						<div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
 							<div class="counter-style-1">
 								<div class="text-primary">
-									<span class="counter">1500</span><span>+</span>
+									<span class="counter">15</span><span>+</span>
 								</div>
 								<span class="counter-text">Questions Answered</span>
 							</div>
@@ -302,9 +302,9 @@
 						<div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
 							<div class="counter-style-1">
 								<div class="text-black">
-									<span class="counter">1000</span><span>+</span>
+									<span class="counter">10</span><span>+</span>
 								</div>
-								<span class="counter-text">Ordered Coffee's</span>
+								<span class="counter-text">Questions Asked</span>
 							</div>
 						</div>
 					</div>
