--- a/surfa/templates/surfa/portfolio.html
+++ b/surfa/templates/surfa/portfolio.html
@@ -36,305 +36,39 @@
 							</li>
 							<li data-filter="book" class="btn">
 								<input type="radio">
-								<a href="#"><span>web development</span></a> 
-							</li>
-							<li data-filter="courses" class="btn">
-								<input type="radio">
-								<a href="#"><span>Android apps</span></a> 
-							</li>
-							<li data-filter="education" class="btn">
-								<input type="radio">
-								<a href="#"><span>iOS apps</span></a> 
+								<a href="#"><span>----</span></a> 
 							</li>
 						</ul>
 					</div>
 					<div class="clearfix">
 						<ul id="masonry" class="ttr-gallery-listing magnific-image row">
+							{% for Post_Projects  in Post_Projects_list %}
 							<li class="action-card col-lg-3 col-md-4 col-sm-6 book">
 								<div class="ttr-box portfolio-bx">
 									<div class="ttr-media media-ov2 media-effect">
 										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_1.jpg" %}" alt=""> 
+											<img src="{{ Post_Projects.image.url }}" alt=""> 
 										</a>
 										<div class="ov-box">
 											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_1.jpg" %}" class="magnific-anchor" title="Title Come Here">
+												<a href="{{ Post_Projects.image.url }}" class="magnific-anchor" title="{{Post_Projects.title}}">
 													<i class="ti-search"></i>
 												</a>
 											</div>
 											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
+												<h4><a href="{{Post_Projects.url}}">{{Post_Projects.title}}</a></h4>
 												
 											</div>
 										</div>
 									</div>
 								</div>
 							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 education book">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_2.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_2.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 courses">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_3.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_3.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 book education">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_4.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_4.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 courses">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_5.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_5.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 education">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_6.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_6.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 book">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_7.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_7.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 courses">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_8.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_8.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 education courses">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_9.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_9.jpg" %}"  class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 book">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_10.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_10.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 courses">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src="{% static "assets/images/portfolio/image_11.jpg" %}" alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_11.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="action-card col-lg-3 col-md-4 col-sm-6 education book">
-								<div class="ttr-box portfolio-bx">
-									<div class="ttr-media media-ov2 media-effect">
-										<a href="javascript:void(0);">
-											<img src={% static "assets/images/portfolio/image_12.jpg" %} alt=""> 
-										</a>
-										<div class="ov-box">
-											<div class="overlay-icon align-m"> 
-												<a href="{% static "assets/images/portfolio/image_12.jpg" %}" class="magnific-anchor" title="Title Come Here">
-													<i class="ti-search"></i>
-												</a>
-											</div>
-											<div class="portfolio-info-bx bg-primary">
-												<h4><a href="#">Soft skills</a></h4>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</li>
+							{% endfor %}
 						</ul>
 					</div>
 				</div>
 			</div>
         </div>
-		<div class="section-area content-inner section-sp1">
-			<div class="container">
-				<div class="section-content">
-					<div class="row">
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
-							<div class="counter-style-1">
-								<div class="text-primary">
-									<span class="counter">3000</span><span>+</span>
-								</div>
-								<span class="counter-text">Completed Projects</span>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
-							<div class="counter-style-1">
-								<div class="text-black">
-									<span class="counter">2500</span><span>+</span>
-								</div>
-								<span class="counter-text">Happy Clients</span>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
-							<div class="counter-style-1">
-								<div class="text-primary">
-									<span class="counter">1500</span><span>+</span>
-								</div>
-								<span class="counter-text">Questions Answered</span>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
-							<div class="counter-style-1">
-								<div class="text-black">
-									<span class="counter">1000</span><span>+</span>
-								</div>
-								<span class="counter-text">Ordered Coffee's</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div><!-- Our Status END ==== -->
 		<div class="section-area section-sp1">
 			<div class="container">
 				<div class="row">
