--- a/surfa/templates/surfa/index.html
+++ b/surfa/templates/surfa/index.html
@@ -367,8 +367,8 @@
                 <div class="container">
 					<div class="row">
 						<div class="col-md-12 text-white heading-bx left">
-							<h2 class="title-head text-uppercase">what people <span>say</span></h2>
-							<p>It is a long established fact that a reader will be distracted by the readable content of a page</p>
+							<h2 class="title-head text-uppercase">We works for the client's full<span>satisfaction.</span></h2>
+							<p></p>
 						</div>
 					</div>
 					<div class="testimonial-carousel owl-carousel owl-btn-1 col-12 p-lr0">
@@ -378,11 +378,11 @@
 									<img src="{% static "assets/images/banner/forty.jpg" %}" alt="">
 								</div>
 								<div class="testimonial-info">
-									<h5 class="name">Peter Packer</h5>
+									<h5 class="name">---</h5>
 									<p>-Art Director</p>
 								</div>
 								<div class="testimonial-content">
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type...</p>
+									<p>We are Trusted 15+ Countries Worldwide...</p>
 								</div>
 							</div>
 						</div>
@@ -392,11 +392,11 @@
 									<img src="{% static "assets/images/banner/forty.jpg" %}" alt="">
 								</div>
 								<div class="testimonial-info">
-									<h5 class="name">Peter Packer</h5>
+									<h5 class="name">---</h5>
 									<p>-Art Director</p>
 								</div>
 								<div class="testimonial-content">
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type...</p>
+									<p>We discover and define ideas, create and design visuals, develop a site, test, and go lives...</p>
 								</div>
 							</div>
 						</div>
