--- a/surfa/templates/surfa/footer.html
+++ b/surfa/templates/surfa/footer.html
@@ -29,10 +29,9 @@
 								<div class="widget footer_widget">
 									<h5 class="footer-title">Surfa</h5>
 									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li><a href="about-1.html">About</a></li>
-										<li><a href="faq-1.html">FAQs</a></li>
-										<li><a href="contact-1.html">Contact</a></li>
+										<li><a href="{% url 'home' %}">Home</a></li>
+										<li><a href="/about1">About</a></li>
+										<li><a href="/contact1">Contact</a></li>
 									</ul>
 								</div>
 							</div>
@@ -40,10 +39,9 @@
 								<div class="widget footer_widget">
 									<h5 class="footer-title">Get In Touch</h5>
 									<ul>
-										<li><a href="#">Dashboard</a></li>
-										<li><a href="blog-classic-grid.html">Blog</a></li>
-										<li><a href="portfolio.html">Portfolio</a></li>
-										<li><a href="event.html">Event</a></li>
+										<li><a href="#">blog/projects</a></li>
+										<li><a href="https://medium.com/@surfaorg">Blog</a></li>
+										<li><a href="/portfolio">Projects</a></li>
 									</ul>
 								</div>
 							</div>
@@ -51,10 +49,8 @@
 								<div class="widget footer_widget">
 									<h5 class="footer-title">Our Service</h5>
 									<ul>
-										<li><a href="courses.html">Our Service</a></li>
-										<li><a href="courses-details.html">Details</a></li>
-										<li><a href="membership.html">Membership</a></li>
-										<li><a href="profile.html">Profile</a></li>
+										<li><a href="https://surfa.godaddysites.com/">Our Service</a></li>
+										<li><a href="/membership">Membership</a></li>
 									</ul>
 								</div>
 							</div>
