--- a/surfa/templates/surfa/footer.html
+++ b/surfa/templates/surfa/footer.html
@@ -59,6 +59,16 @@
 					<div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
                         <div class="widget widget_gallery gallery-grid-4">
                             <h5 class="footer-title">Our Gallery</h5>
+							<ul class="magnific-image">
+								<li><a href="{% static 'assets/images/portfolio/image1.jpg' %}" class="magnific-anchor"><img src="{% static 'assets/images/portfolio/image.jpg' %}" alt=""></a></li>
+								<li><a href="{% static 'assets/images/portfolio/image2.jpg' %}" class="magnific-anchor"><img src="{% static 'assets/images/portfolio/image2.jpg' %}" alt=""></a></li>
+								<li><a href="{% static 'assets/images/portfolio/image3.jpg' %}" class="magnific-anchor"><img src="{% static 'assets/images/portfolio/image3.jpg' %}" alt=""></a></li>
+								<li><a href="{% static 'assets/images/portfolio/image4.jpg' %}" class="magnific-anchor"><img src="{% static 'assets/images/portfolio/image4.jpg' %}" alt=""></a></li>
+								<li><a href="{% static 'assets/images/portfolio/image5.jpg' %}" class="magnific-anchor"><img src="{% static 'assets/images/portfolio/image5.jpg' %}" alt=""></a></li>
+								<li><a href="{% static 'assets/images/portfolio/image6.jpg' %}" class="magnific-anchor"><img src="{% static 'assets/images/portfolio/image6.jpg' %}" alt=""></a></li>
+								<li><a href="{% static 'assets/images/portfolio/image7.jpg' %}" class="magnific-anchor"><img src="{% static 'assets/images/portfolio/image7.jpg' %}" alt=""></a></li>
+								<li><a href="{% static 'assets/images/portfolio/image8.jpg' %}" class="magnific-anchor"><img src="{% static 'assets/images/portfolio/image8.jpg' %}" alt=""></a></li>
+							</ul>
                         </div>
                     </div>
                 </div>
