--- a/surfa/templates/surfa/index.html
+++ b/surfa/templates/surfa/index.html
@@ -173,7 +173,7 @@
 				<div class="section-area section-sp1 gallery-bx">
 					<div class="container">
 						<div class="col-md-12 heading-bx left">
-							<h2 class="title-head">Our <span>Gallery</span></h2>
+							<h2 class="title-head">Our <span></span></h2>
 							<p>We offer endless posibilities to put you on the path to Success</p>
 						</div>
 						<div class="feature-filters clearfix center m-b40">
@@ -184,15 +184,15 @@
 								</li>
 								<li data-filter="book" class="btn">
 									<input type="radio">
-									<a href="#"><span>web development</span></a> 
+									<a href="#"><span>Websites</span></a> 
 								</li>
 								<li data-filter="courses" class="btn">
 									<input type="radio">
-									<a href="#"><span>Android apps</span></a> 
+									<a href="#"><span>Mobile Apps</span></a> 
 								</li>
 								<li data-filter="education" class="btn">
 									<input type="radio">
-									<a href="#"><span>iOS apps</span></a> 
+									<a href="#"><span>Softwares</span></a> 
 								</li>
 							</ul>
 						</div>
@@ -202,16 +202,16 @@
 									<div class="ttr-box portfolio-bx">
 										<div class="ttr-media media-ov2 media-effect">
 											<a href="javascript:void(0);">
-												<img src="{% static "assets/images/portfolio/image1.jpg" %}" class="rounded featured-image-list" alt=""> 
+												<img src="{% static "assets/images/portfolio/mbm-project" %}" class="rounded featured-image-list" alt=""> 
 											</a>
 											<div class="ov-box">
 												<div class="overlay-icon align-m"> 
-													<a href="{% static "assets/images/portfolio/image1.jpg" %}" class="magnific-anchor" title="Title Come Here">
+													<a href="{% static "assets/images/portfolio/mbm-project" %}" class="magnific-anchor" title="Title Come Here">
 														<i class="ti-search"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
-													<h4><a href="#">Soft skills</a></h4>
+													<h4><a href="#">mbm fitness & relaxation</a></h4>
 													
 												</div>
 											</div>
@@ -222,16 +222,16 @@
 									<div class="ttr-box portfolio-bx">
 										<div class="ttr-media media-ov2 media-effect">
 											<a href="javascript:void(0);">
-												<img src="{% static "assets/images/portfolio/image2.jpg" %}" class="rounded featured-image-list" alt=""> 
+												<img src="{% static "assets/images/portfolio/native-gym" %}" class="rounded featured-image-list" alt=""> 
 											</a>
 											<div class="ov-box">
 												<div class="overlay-icon align-m"> 
-													<a href="{% static "assets/images/portfolio/image2.jpg" %}" class="magnific-anchor" title="Title Come Here">
+													<a href="{% static "assets/images/portfolio/native-gym" %}" class="magnific-anchor" title="Title Come Here">
 														<i class="ti-search"></i>
 													</a>
 												</div>
 												<div class="portfolio-info-bx bg-primary">
-													<h4><a href="#">Soft skills</a></h4>
+													<h4><a href="https://nativegym.herokuapp.com/">native fitness centre</a></h4>
 													
 												</div>
 											</div>
