surfa for heroku

--- a/surfa/templates/surfa/index.html
+++ b/surfa/templates/surfa/index.html
@@ -202,11 +202,11 @@
 									<div class="ttr-box portfolio-bx">
 										<div class="ttr-media media-ov2 media-effect">
 											<a href="javascript:void(0);">
-												<img src="{% static "assets/images/portfolio/mbm-project" %}" class="rounded featured-image-list" alt=""> 
+												<img src="{% static "assets/images/portfolio/mbm-project.png" %}" class="rounded featured-image-list" alt=""> 
 											</a>
 											<div class="ov-box">
 												<div class="overlay-icon align-m"> 
-													<a href="{% static "assets/images/portfolio/mbm-project" %}" class="magnific-anchor" title="Title Come Here">
+													<a href="{% static "assets/images/portfolio/mbm-project.png" %}" class="magnific-anchor" title="Title Come Here">
 														<i class="ti-search"></i>
 													</a>
 												</div>
@@ -222,11 +222,11 @@
 									<div class="ttr-box portfolio-bx">
 										<div class="ttr-media media-ov2 media-effect">
 											<a href="javascript:void(0);">
-												<img src="{% static "assets/images/portfolio/native-gym" %}" class="rounded featured-image-list" alt=""> 
+												<img src="{% static "assets/images/portfolio/native-gym.png" %}" class="rounded featured-image-list" alt=""> 
 											</a>
 											<div class="ov-box">
 												<div class="overlay-icon align-m"> 
-													<a href="{% static "assets/images/portfolio/native-gym" %}" class="magnific-anchor" title="Title Come Here">
+													<a href="{% static "assets/images/portfolio/native-gym.png" %}" class="magnific-anchor" title="Title Come Here">
 														<i class="ti-search"></i>
 													</a>
 												</div>
