--- a/surfa/templates/surfa/index.html
+++ b/surfa/templates/surfa/index.html
@@ -173,7 +173,7 @@
 				<div class="section-area section-sp1 gallery-bx">
 					<div class="container">
 						<div class="col-md-12 heading-bx left">
-							<h2 class="title-head">Some Of Our completed<span>Projects</span></h2>
+							<h2 class="title-head">Recent<span>Projects</span></h2>
 							<p>We offer endless posibilities to put you on the path to Success</p>
 						</div>
 						<div class="feature-filters clearfix center m-b40">
@@ -218,7 +218,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="action-card col-lg-3 col-md-4 col-sm-6 education book">
+								<div class="action-card col-lg-3 col-md-4 col-sm-6 book">
 									<div class="ttr-box portfolio-bx">
 										<div class="ttr-media media-ov2 media-effect">
 											<a href="javascript:void(0);">
