surfa for heroku

--- a/surfa/templates/surfa/about-1.html
+++ b/surfa/templates/surfa/about-1.html
@@ -24,6 +24,16 @@
 		</div>
 		<!-- Page Content Box ==== -->
 		<div class="content-block">
+			<div class="section-area section-sp1 gallery-bx">
+				<div class="container">
+					<div class="col-md-12 heading-bx left">
+						<h2 class="title-head">Surfa Inc <span></span></h2>
+						<p>Surfa inc. is one of the best technology companies in the world 
+							with highly skilled developers.
+							specialised in Web development, mobile and software application development.
+
+						</p>
+					</div>
             <!-- About Us ==== -->
 			<div class="section-area section-sp1">
 				<div class="container">
@@ -82,6 +92,35 @@
 									<h3>Dedicated Team</h3>
 									<p>
 										Our team are dedicated and highly skilled developers.
+									</p>
+								</div>
+							</div><!--features icon wrap-->
+						</div><!--features col-->
+						<div class="row">
+							<div class="col-sm-6 margin-bottom30">
+								<div class="feature-icon-wrap services-icons clearfix">
+									<div class="left-side-icon">
+										<i class="ion-ios-world-outline front-icon"></i>
+									</div>
+									<div class="features-text-right">
+										<h3>Trust and privacy</h3>
+										<p>
+											your privacy is our priority.
+										</p>
+									</div>
+								</div>
+							</div><!--services col-->
+						</div><!--features col-->
+						<div class="col-sm-6 margin-bottom30">
+							<div class="feature-icon-wrap clearfix">
+								<div class="left-side-icon">
+									<i class="ion-ios-gear-outline front-icon"></i>
+									<i class="ion-ios-gear-outline back-icon"></i>
+								</div>
+								<div class="features-text-right">
+									<h3>Search Engine optimization</h3>
+									<p>
+										We manipulate search keywords for the benefit of our clients so they get fair share of the internet traffic and rank higher on search results.
 									</p>
 								</div>
 							</div><!--features icon wrap-->
