--- a/surfa/templates/surfa/portfolio.html
+++ b/surfa/templates/surfa/portfolio.html
@@ -106,9 +106,9 @@
 								<i class="ion-ios-world-outline front-icon"></i>
 							</div>
 							<div class="features-text-right">
-								<h3>Social Media</h3>
+								<h3>Trust and privacy</h3>
 								<p>
-									Connect with us on any social media platform.
+									your privacy is our priority.
 								</p>
 							</div>
 						</div>
