--- a/surfa/templates/surfa/about-1.html
+++ b/surfa/templates/surfa/about-1.html
@@ -96,20 +96,21 @@
 								</div>
 							</div><!--features icon wrap-->
 						</div><!--features col-->
-							<div class="col-sm-6 margin-bottom30">
-								<div class="feature-icon-wrap services-icons clearfix">
-									<div class="left-side-icon">
-										<i class="ion-ios-world-outline front-icon"></i>
-									</div>
-									<div class="features-text-right">
-										<h3>Trust and privacy</h3>
-										<p>
-											your privacy is our priority.
-										</p>
-									</div>
+					</div><!--row-->
+					<div class="row">
+						<div class="col-sm-6 margin-bottom30">
+							<div class="feature-icon-wrap services-icons clearfix">
+								<div class="left-side-icon">
+									<i class="ion-ios-world-outline front-icon"></i>
 								</div>
-							</div><!--services col-->
-						</div><!--features col-->
+								<div class="features-text-right">
+									<h3>Trust and privacy</h3>
+									<p>
+										your privacy is our priority.
+									</p>
+								</div>
+							</div>
+						</div><!--services col-->
 						<div class="col-sm-6 margin-bottom30">
 							<div class="feature-icon-wrap clearfix">
 								<div class="left-side-icon">
