surfa for heroku

--- a/surfa/templates/surfa/about-1.html
+++ b/surfa/templates/surfa/about-1.html
@@ -106,7 +106,7 @@
 								<div class="features-text-right">
 									<h3>Trust and privacy</h3>
 									<p>
-										your privacy is our priority.
+										your trust and privacy is our priority.
 									</p>
 								</div>
 							</div>
