--- a/surfa/templates/surfa/about-1.html
+++ b/surfa/templates/surfa/about-1.html
@@ -27,7 +27,7 @@
 			<div class="section-area section-sp1 gallery-bx">
 				<div class="container">
 					<div class="col-md-12 heading-bx left">
-						<h2 class="title-head">Surfa Inc <span></span></h2>
+						<h2 class="title-head">Surfa Inc. <span></span></h2>
 						<p>Surfa inc. is one of the best technology companies in the world 
 							with highly skilled developers.
 							specialised in Web development, mobile and software application development.
