--- a/surfa/templates/surfa/base3.html
+++ b/surfa/templates/surfa/base3.html
@@ -66,29 +66,15 @@
 							<a href="#testimonial" class="nav-item nav-link">Testimonial</a>
 							<a href="#contact" class="nav-item nav-link">Contact</a>
 						</div>
-						<a href="" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">login</a>
-						<a href="" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">signup</a>
+						{% if user.is_authenticated %}
+						<a href="{% url 'accounts:logout' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Log Out</a>
+						{% else %}
+						<a href="{% url 'accounts:login' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Login</a>
+						<a href="{% url 'accounts:login' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Signup</a>
+						{% endif %}
 					</div>
 				</nav>
-				<div class="container-xxl bg-primary hero-header">
-					<div class="container">
-						<div class="row g-5 align-items-center">
-							<div class="col-lg-6 text-center text-lg-start">
-								<h1 class="text-white mb-4 animated slideInDown">Awesome Websites & Softwares To Manage Your Business</h1>
-								<p class="text-white pb-3 animated slideInDown">Signup with Surfa now!, tell us what you want .We Are Here to Grow Your Business Exponentially.</p>
-								<div class="position-relative w-100 mt-3">
-									<input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Your Email" style="height: 58px;">
-									<button type="button" class="btn btn-primary rounded-pill py-2 px-3 shadow-none position-absolute top-0 end-0 m-2">login</button>
-									
-								</div>
-							</div>
-							<div class="col-lg-6 text-center text-lg-start">
-								<img class="img-fluid rounded animated zoomIn" src="{% static 'img/hero.jpg' %}" alt="">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+				
 
 	{% block content %}
 	{% load bootstrap5 %}
