novel for heroku

--- a/surfa/templates/surfa/base3.html
+++ b/surfa/templates/surfa/base3.html
@@ -66,15 +66,18 @@
 							<a href="#testimonial" class="nav-item nav-link">Testimonial</a>
 							<a href="#contact" class="nav-item nav-link">Contact</a>
 						</div>
-						{% if user.is_authenticated %}
-						<a href="{% url 'accounts:logout' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Log Out</a>
-						{% else %}
-						<a href="{% url 'accounts:login' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Login</a>
-						<a href="{% url 'accounts:login' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Signup</a>
-						{% endif %}
+							
+							{% if user.is_authenticated %}
+							<a href="{% url 'accounts:logout' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Log Out</a>
+							{% else %}
+							<a href="{% url 'accounts:login' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Login</a>
+							<a href="{% url 'accounts:login' %}" class="btn btn-light rounded-pill py-2 px-4 ms-3 d-none d-lg-block">Signup</a>
+							{% endif %}
+						
 					</div>
 				</nav>
-				
+			
+			<!-- Navbar & Hero End -->
 
 	{% block content %}
 	{% load bootstrap5 %}
