--- a/surfa/templates/surfa/base3.html
+++ b/surfa/templates/surfa/base3.html
@@ -3,11 +3,13 @@
 	{% load static %}
 	
 	<head>
-		<meta charset="utf-8">
+		
+		<meta charset="UTF-8">
+		<meta name="description" content="native gym">
+		<meta name="keywords" content="Native, Gym, Fitness, nearby ,Center ,Native gym ,nearby Gym , Fitness nearby, near me, top 10 gym centers,top 5 gym centers">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Surfa Technologies</title>
-		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-		<meta content="" name="keywords">
-		<meta content="" name="description">
 	
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="{% static 'fav/apple-touch-icon.png' %}">
