--- a/surfa/templates/surfa/index2.html
+++ b/surfa/templates/surfa/index2.html
@@ -32,28 +32,28 @@
                         <div class="feature-item bg-light rounded text-center p-5">
                             <i class="fa fa-4x fa-chart-pie text-primary mb-4"></i>
                             <h5 class="mb-3">Data Analytics</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <p class="m-0"></p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="feature-item bg-light rounded text-center p-5">
                             <i class="fa fa-4x fa-code text-primary mb-4"></i>
                             <h5 class="mb-3">Web Development</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <p class="m-0">We build fully functional web apps which are user-friendly with a compelling responsive design that scales across various devices leaving your clients with sastifying web experience.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="feature-item bg-light rounded text-center p-5">
                             <i class="fab fa-4x fa-android text-primary mb-4"></i>
                             <h5 class="mb-3">Android App Development</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <p class="m-0">Mobile apps can be a smart move to grow your business. We can help you connect your customers to one database for easy e-commerce transactions.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="feature-item bg-light rounded text-center p-5">
                             <i class="fa fa-4x fa-search text-primary mb-4"></i>
                             <h5 class="mb-3">SEO Optimization</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                            <p class="m-0">Have you ever wondered why some websites rank higher than others in search queries? We manipulate search keywords for the benefit of our clients so they get a fair share of internet traffic and rank higher on the search results.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -507,7 +507,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#"></a>,<script>document.write(new Date().getFullYear());</script> surfa technologies, Inc. All Right Reserved.
+                            &copy; <a class="border-bottom" href="#"></a><script>document.write(new Date().getFullYear());</script> surfa technologies, Inc. All Right Reserved.
                             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         </div>
                         <div class="col-md-6 text-center text-md-end">
