--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@
 html,
 body {
     height: 100%;
+    font-family: "Helvetica", sans-serif;
     -webkit-font-smoothing: antialiased;
     margin: auto;
     -ms-overflow-style: none;
