--- a/surfa/templates/surfa/index2.html
+++ b/surfa/templates/surfa/index2.html
@@ -25,7 +25,7 @@
         </div>
         <!-- Navbar & Hero End -->
         <!-- Feature Start -->
-        <div class="container-xxl py-6">
+        <div class="container-xxl position-relative p-0">
             <div class="container">
                 <div class="row g-4">
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
@@ -110,7 +110,7 @@
         </div>
         <!-- About End -->
         <!-- Overview Start -->
-        <div class="container-xxl bg-light my-6 py-5" id="overview">
+        <div class="container-xxl py-6" id="overview">
             <div class="container">
                 <div class="row g-5 py-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
